[package]
name = "lethelauncher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"
codegen-units = 1